--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ permalink:        pretty
 title:            garciparedes
 tagline:          'A Jekyll theme'
 description:      'Computer engineering student, developer, scratcher, beatmaker, gamer and amateur photographer for the time.'
-url:              http://garciparedes.github.io/
+url:              http://garciparedes.github.io
 
 author:
   name:           'Sergio Garcia'
