--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ description:      'Computer engineering student, developer, scratcher, beatmaker
 url:              http://garciparedes.github.io
 
 author:
-  name:           'Sergio Garcia'
-  url:            https://twitter.com/garciparedes
+  name:           'Mark Otto'
+  url:            https://twitter.com/mdo
 
 paginate:         5
 
