--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            garciparedes
+title:            Hyde
 tagline:          'A Jekyll theme'
-description:      'Computer engineering student, developer, scratcher, beatmaker, gamer and amateur photographer for the time.'
-url:              http://garciparedes.github.io
+description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+url:              http://hyde.getpoole.com
 
 author:
   name:           'Mark Otto'
