--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ pygments:         true
 permalink:        pretty
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
-description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:              http://hyde.getpoole.com
+title:            garciparedes
+tagline:          'Personal Website'
+description:      'Computer engineering student, developer, scratcher, beatmaker, gamer and amateur photographer for the time.'
+url:              http://garciparedes.github.io
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Sergio Garcia'
+  url:            https://twitter.com/garciparedes
 
 paginate:         5
 
@@ -21,4 +21,4 @@ paginate:         5
 version:          2.0.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/garciparedes/garciparedes.github.io
