--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Setup
 title:            garciparedes
 tagline:          'Personal Website'
-description:      'Computer engineering student, developer, scratcher, beatmaker, gamer and amateur photographer for the time.'
+description:      'Computer engineering student, developer, scratcher, beatmaker, amateur photographer and frustrated gamer.'
 url:              http://garciparedes.github.io
 
 author:
