--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,6 @@ version:          2.0.0
 
 github:
   repo:           https://github.com/garciparedes/garciparedes.github.io
+
+# This is the list of pages to incldue in the header of the website.
+pages_list:       ['About', 'Archive', 'Programming', 'Music']
