--- a/_config.yml
+++ b/_config.yml
@@ -3,29 +3,30 @@ markdown: redcarpet
 highlighter: pygments
 
 # Site settings
-title: "Mediator"
-description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+title: "garciparedes"
+description: > # 'Computer engineer student, developer, scratcher, beatmaker, amateur photographer and frustrated gamer.'
 
-email: a-mail@mail.mail
+email: garciparedes@gmail.com
+
 #blog logo
-logo: "/assets/images/df_logo.jpg"
-# blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+logo: "/assets/images/logo.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+# blog cover
+cover: "/assets/images/cover.jpg"
+
+name: 'Sergio Garcia'
+author: 'Sergio Garcia'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "http://garciparedes.github.io/" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
+    url:	https://twitter.com/garciparedes
     desc: Follow me on twitter
     share_url: http://twitter.com/share
     share_title: ?text=
@@ -39,7 +40,7 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/dirkfabisch
+    url:	https://github.com/garciparedes
     desc:	Fork me on github
     share_url:
     share_title:
