--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Sergio GarciaPrado
+email: garciparedes@gmail.com
+url: http://garciparedes.me
+description: "I'm student of Computer Engineering with a great desire to learn."
+skills: "Junior Computer Scientist"
+meta_author: GarciaPrado Sergio
 
 # Google webmaster tools
 google_verify:
@@ -20,7 +20,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+disqus_shortname: garciparedes
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -39,15 +39,15 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/garciparedes
   - title: facebook
     url:
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/jekyll
   - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: http://bitbucket.org/garciparedes
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/garciparedes
 
 # Postal address (add as many lines as necessary)
 address:
