--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ disqus_shortname: garciparedes
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 18bc9c #80B3FF
-  primary-rgb: "24,288,156" #"128,179,255"
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+  primary: 388E3C #80B3FF
+  primary-rgb: "56,142,60" #"128,179,255"
+  secondary: 4CAF50 #FD6E8A
+  secondary-dark: 215524 #A2122F
 
 # Footer settings
 footer:
