--- a/_config.yml
+++ b/_config.yml
@@ -65,9 +65,7 @@ programing-skills:
       percent: 90
     - name: Python
       percent: 60
-    - name: JavaScript
-      percent: 70
-    - name: HTML/CSS
+    - name: JS
       percent: 70
     - name: Latex
       percent: 75
@@ -75,6 +73,21 @@ programing-skills:
       percent: 75
     - name: C
       percent: 65
+
+interests:
+    - name: Cars
+      percent: 95
+    - name: Cycling
+      percent: 75
+    - name: Turntablism
+      percent: 85
+    - name: Rap Music
+      percent: 95
+    - name: Logic Problems
+      percent: 90
+    - name: Cooking
+      percent: 70
+
 # Postal address (add as many lines as necessary)
 address:
   - line: Palencia, Spain
