Improved interest style bug

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ interests:
       percent: 75
     - name: Turntablism
       percent: 85
-    - name: Rap Music
+    - name: Rap
       percent: 95
     - name: Logic Problems
       percent: 90
