Improved portfolio content

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: Sergio García Prado
   location: Location
   social: Around the Web
   credits: Credits
