--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ about:
     description: I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
     education:
         -   time: 2013 - 2017
-            degree: Bachelor in Computer Engineering, mention in Computing.
+            degree: Bachelor's degree in Computer Science, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
 
