--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: Sergio Garcia Prado
+title: Sergio García Prado
 email: garciparedes@gmail.com
 url: http://garciparedes.me
 description: "I'm student of Computer Engineering with a great desire to learn."
 skills: "Junior Computer Scientist"
-meta_author: GarciaPrado Sergio
+meta_author: García Prado Sergio
 
 # Google webmaster tools
 google_verify:
