updated mail address

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Sergio García Prado
-email: garciparedes@gmail.com
+email: sergio@garciparedes.me
 url: http://garciparedes.me
 description: "I'm student of Computer Engineering with a great desire to learn."
 skills: "Junior Computer Scientist"
