--- a/_config.yml
+++ b/_config.yml
@@ -41,11 +41,11 @@ cv-link: https://github.com/garciparedes/CV/raw/master/cv-sergio-garciaprado.pdf
 about:
     description: I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
     education:
-        -   time: September 2013 - present
+        -   time: 2013 - present
             degree: Bachelor's degree in Computer Science, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
-        -   time: July 2016 - present
+        -   time: 2016 - present
             title: Software Developer Internship
             company-name: Brooktec
 
