--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ disqus_shortname: garciparedes
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 388E3C #80B3FF
-  primary-rgb: "56,142,60" #"128,179,255"
-  secondary: 4CAF50 #FD6E8A
-  secondary-dark: 215524 #A2122F
+  primary: 9E9E9E #80B3FF
+  primary-rgb: "158,158,158" #"128,179,255"
+  secondary: 616161 #FD6E8A
+  secondary-dark: 9E9E9E #A2122F
 
 # Footer settings
 footer:
@@ -45,7 +45,7 @@ about:
             degree: Bachelor's degree in Computer Science, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
-        -   time: 2016
+        -   time: 2016 (3 months)
             title: Software Developer Internship
             company-name: Brooktec
 
