--- a/_config.yml
+++ b/_config.yml
@@ -65,17 +65,17 @@ social:
 
 programing-skills:
     - name: Java
-      percent: 90
+      percent: 85
     - name: Python
-      percent: 60
-    - name: JS
+      percent: 85
+    - name: TypeScript
       percent: 70
     - name: Latex
-      percent: 75
-    - name: Android
-      percent: 75
+      percent: 95
+    - name: Scala
+      percent: 50
     - name: C
-      percent: 65
+      percent: 75
 
 interests:
     - name: Cars
