--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ social:
   - title: linkedin
     url: https://linkedin.com/in/garciparedes
   - title: send
-    url: https://telegram.me/garciparedes
+    url: https://t.me/garciparedes
   - title: twitter
     url: https://twitter.com/garciparedes
   - title: facebook
@@ -93,7 +93,8 @@ interests:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Palencia, Spain
+  text: Palencia, Spain
+  url:  https://goo.gl/maps/icniv86V1GB2
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>. Improved and adapted by <a target="_blank" href="https://github.com/garciparedes/garciparedes.github.io/commits/master">@garciparedes</a>'
