Added Medium to social links

--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,8 @@ social:
     url: https://linkedin.com/in/garciparedes
   - title: send
     url: https://t.me/garciparedes
+  - title: medium
+    url: https://medium.com/@garciparedes
 
 # Postal address (add as many lines as necessary)
 address:
