--- a/_config.yml
+++ b/_config.yml
@@ -41,13 +41,27 @@ cv-link: http://nbviewer.jupyter.org/github/garciparedes/cv/blob/master/garcipar
 about:
     description: I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, i.e. data structures, algorithms, and everything related with encode things.
     education:
-        -   time: 2013 - present
+
+        -   time: 2017 - Present
+            degree: Bachelor's degree in Statistics.
+            school: University of Valladolid, Spain.
+
+        -   time: 2013 - 2017
             degree: Bachelor's degree in Computer Engineering, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
+      
+        -   time: 2017 - Present
+            title: Open Source Developer
+            company-name: TFGraph
+
         -   time: 2016 (3 months)
             title: Software Developer Internship
             company-name: Brooktec
+
+        -   time: 2015 - 2016
+            title: Android Developer
+            company-name: EvaluaMe
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
