--- a/_config.yml
+++ b/_config.yml
@@ -12,22 +12,16 @@ google_verify:
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
 
-# Contact form:
-# - static : pass through formspree.io to validate email sending
-# - disqus : replace contact form by disqus thread
-# - comment the line below if you want to stick with the default PHP contact form
-contact: static
-
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
 disqus_shortname: garciparedes
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 9E9E9E #80B3FF
-  primary-rgb: "158,158,158" #"128,179,255"
-  secondary: 616161 #FD6E8A
-  secondary-dark: 9E9E9E #A2122F
+  primary: '9E9E9E'
+  primary-rgb: '158,158,158'
+  secondary: '616161'
+  secondary-dark: '9E9E9E'
 
 # Footer settings
 footer:
