Verified ownership of site

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ skills: "Junior Computer Scientist"
 meta_author: García Prado Sergio
 
 # Google webmaster tools
-google_verify:
+google_verify: 'H46a1v6GpJ-90m1n4nAS4yQ5ADvlcz5YTfX5nl1gltk'
 
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:
