--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Sergio García Prado
 email: sergio@garciparedes.me
-url: http://garciparedes.me
+url: https://garciparedes.me
 description: "I'm student of Computer Engineering with a great desire to learn."
 skills: "Junior Computer Scientist"
 meta_author: García Prado Sergio
@@ -30,7 +30,7 @@ footer:
   social: Around the Web
   credits: Credits
 
-cv-link: http://nbviewer.jupyter.org/github/garciparedes/cv/blob/master/garciparedes-cv.pdf
+cv-link: https://nbviewer.jupyter.org/github/garciparedes/cv/blob/master/garciparedes-cv.pdf
 
 about:
     description: I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, i.e. data structures, algorithms, and everything related with encode things.
@@ -44,7 +44,7 @@ about:
             degree: Bachelor's degree in Computer Engineering, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
-      
+
         -   time: 2017 - Present
             title: Open Source Developer
             company-name: TFGraph
