Fixed a bug related with external urls

--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ social:
   - title: stack-overflow
     url: https://stackoverflow.com/users/3921457
   - title: linkedin
-    url: https://linkedin.com/in/garciparedes
+    url: https://www.linkedin.com/in/garciparedes/
   - title: send
     url: https://t.me/garciparedes
   - title: medium
