Change in permalink

--- a/_config.yml
+++ b/_config.yml
@@ -80,4 +80,4 @@ credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a
 
 # Build settings
 markdown: kramdown
-permalink: none
+permalink: /:title.html
