--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,4 @@ env:
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
-sudo: required
-before_install:
-  - sudo update-ca-certificates
+sudo: false
