--- a/_config.yml
+++ b/_config.yml
@@ -51,16 +51,16 @@ about:
             school: University of Valladolid, Spain.
     work:
 
-        -   time: 2017 - Present
-            title: Open Source Developer
+        -   time: 2017 (5 months)
+            title: Open Source Developer (Final Degree Project)
             company-name: TFGraph
 
         -   time: 2016 (3 months)
-            title: Software Developer Internship
+            title: Software Developer (Internship)
             company-name: Brooktec
 
         -   time: 2015 - 2016
-            title: Android Developer
+            title: Android Developer (Pet Project)
             company-name: EvaluaMe
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
