--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sergio García Prado
 email: sergio@garciparedes.me
 url: https://garciparedes.me
-description: "I'm a Junior Data Scientist with great desire to learn."
+description: "I'm a junior data { engineer, scientist } with great desire to learn."
 skills: "junior data { engineer, scientist }"
 meta_author: García Prado Sergio
 
