Added my new work

--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,9 @@ about:
             degree: Bachelor's degree in Computer Engineering, Mention in Computation.
             school: University of Valladolid, Spain.
     work:
+        -   time: 2018 - Present
+            title: Research Assistant Internship
+            company-name: University of Valladolid, Spain.
 
         -   time: 2017 (5 months)
             title: Open Source Developer (Final Degree Project)
