Fixed minor bug

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ about:
             school: University of Valladolid, Spain.
     work:
         -   time: 2018 - Present
-            title: Research Assistant Internship
+            title: Research Assistant (Internship)
             company-name: University of Valladolid, Spain.
 
         -   time: 2017 (5 months)
