--- a/_config.yml
+++ b/_config.yml
@@ -86,10 +86,10 @@ social:
   - title: trophy
     url: https://www.kaggle.com/garciparedes
   - title: graduation-cap
-    url: https://scholar.google.es/citations?user=X3Mb7BAAAAAJ
+    url: https://scholar.google.com/citations?user=X3Mb7BAAAAAJ
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>. Improved and adapted by <a target="_blank" href="https://github.com/garciparedes/garciparedes.github.io/commits/master">@garciparedes</a>'
+credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="https://startbootstrap.com/">Start Bootstrap</a>. Improved and adapted by <a target="_blank" href="https://github.com/garciparedes/garciparedes.github.io/commits/master">@garciparedes</a>'
 
 # Build settings
 markdown: kramdown
