Some CSS improvements

--- a/_config.yml
+++ b/_config.yml
@@ -61,11 +61,11 @@ about:
             title: Research Assistant (Internship)
             company-name: University of Valladolid, Spain.
 
-        -   time: 2017 (5 months)
+        -   time: 2017
             title: Open Source Developer (Final Degree Project)
             company-name: TFGraph
 
-        -   time: 2016 (3 months)
+        -   time: 2016
             title: Software Developer (Internship)
             company-name: Brooktec
 
