Revert "Improved site description"
This reverts commit bfa46e96304241857bf2952ca7c13dc3f2bad99c.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Sergio García Prado
 email: sergio@garciparedes.me
 url: https://garciparedes.me
-description: "Statistics student and Computer Engineering graduate at University of Valladolid, Spain. Focused on Statistical Computation and Data Science."
+description: "Junior data { engineer, scientist } with great desire to learn. Statistics student and Computer Engineering graduate at University of Valladolid, Spain. Focused on Statistical Computation and Data Science."
 skills: "junior data { engineer, scientist }"
 meta_author: Sergio García Prado
 
