Added sitemap generator

--- a/_config.yml
+++ b/_config.yml
@@ -86,3 +86,6 @@ credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a
 # Build settings
 markdown: kramdown
 permalink: /:title.html
+
+gems:
+  - jekyll-sitemap
