--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ footer:
   social: Social Links
   credits: Credits
 
-curriculum-vitae-link: https://nbviewer.jupyter.org/github/garciparedes/curriculum-vitae/blob/master/garciparedes-cv.pdf
-cover-letter-link: https://nbviewer.jupyter.org/github/garciparedes/cover-letter/blob/master/garciparedes-cl.pdf
+curriculum-vitae-link: https://garciparedes.me/curriculum-vitae/garciparedes-cv.pdf
+cover-letter-link: https://garciparedes.me/cover-letter/garciparedes-cl.pdf
 
 about:
     description: "
