Minor link improvement

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ footer:
   social: Social Links
   credits: Credits
 
-curriculum-vitae-link: https://garciparedes.me/curriculum-vitae/garciparedes-cv.pdf
-cover-letter-link: https://garciparedes.me/cover-letter/garciparedes-cl.pdf
+curriculum-vitae-link: https://garciparedes.me/curriculum-vitae
+cover-letter-link: https://garciparedes.me/cover-letter
 
 about:
     description: "
