Started to work on personal blog

--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,8 @@ nav-links:
     title: "Portfolio"
   - path: "#languages"
     title: "Languages"
+  - path: "/blog"
+    title: "Blog"
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
