--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Sergio García Prado
 email: sergio@garciparedes.me
 url: https://garciparedes.me
 description: "Statistics student and Computer Engineering graduate at University of Valladolid, Spain. Focused on Statistical Computation and Data Science."
-skills: "junior data { engineer, scientist }"
+skills: "Software Engineering | Data Science <br/> Research | Scientific Computation"
 meta_author: Sergio García Prado
 
 # Google webmaster tools
@@ -50,20 +50,27 @@ education:
 
     -   time: 2017 - Present
         degree: Bachelor's degree in Statistics.
-        school: University of Valladolid, Spain.
+        school: <a href="http://uva.es" target="_blank">University of Valladolid</a>
 
     -   time: 2013 - 2017
         degree: Bachelor's degree in Computer Engineering, Mention in Computation.
-        school: University of Valladolid, Spain.
+        school: <a href="http://uva.es" target="_blank">University of Valladolid</a>
+
 work:
+
+    -   time: 2018 - Present
+        title: Software Engineer (Internship)
+        company-name: <a href="https://unlimiteck.com/" target="_blank">Unlimiteck Company Builder</a>
+
     -   time: 2018 - Present
         title: Research Assistant (Internship)
-        company-name: University of Valladolid, Spain.
+        company-name: <a href="http://uva.es" target="_blank">University of Valladolid</a>
 
     -   time: 2016
-        title: Software Developer (Internship)
-        company-name: Brooktec
-        
+        title: Software Engineer (Internship)
+        company-name: <a href="https://brooktec.com/" target="_blank">Brooctec</a>
+
+
 nav-links:
   - path: "#about"
     title: "About"
