--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ work:
 
     -   time: 2016
         title: Software Engineer (Internship)
-        company-name: <a href="https://brooktec.com/" target="_blank">Brooctec</a>
+        company-name: <a href="https://brooktec.com/" target="_blank">Brooktec</a>
 
 
 nav-links:
