Added conditional code for Curriculum Vitae and Cover Letter links.

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer:
   credits: Credits
 
 curriculum-vitae-link: https://garciparedes.me/curriculum-vitae
-cover-letter-link: https://garciparedes.me/cover-letter
+# cover-letter-link: https://garciparedes.me/cover-letter
 
 description: "
   <p>Hi! My name is Sergio and now I’m enrolled in Bachelor’s Degree in Statistics at University of Valladolid, Spain. The reason is because during my Bachelor’s Degree in Computer Engineering the mathematical curiosity arose me. For this reason, I think the merge of my previous engineering knowledge combined with my future scientific learning will enrich me to raise and solve complex problems. In following paragraphs I will describe my professional profile.</p>
