Improved icons for social networks

--- a/_config.yml
+++ b/_config.yml
@@ -78,17 +78,23 @@ nav-links:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: github
+  - icon: fab fa-github
+    title: Github
     url: https://github.com/garciparedes
-  - title: stack-overflow
+  - icon: fab fa-stack-overflow
+    title: Stack Overflow
     url: https://stackoverflow.com/users/3921457
-  - title: medium
+  - icon: fab fa-Medium
+    title: Medium
     url: https://medium.com/@garciparedes
-  - title: graduation-cap
+  - icon: ai ai-google-scholar
+    title: Google Scholar
     url: https://scholar.google.com/citations?user=X3Mb7BAAAAAJ
-  - title: linkedin
+  - icon: fab fa-linkedin
+    title: LinkedIn
     url: https://www.linkedin.com/in/garciparedes/
-  - title: patreon
+  - icon: fab fa-patreon
+    title: Patreon
     url: https://www.patreon.com/garciparedes
 
 # Credits content
