--- a/_config.yml
+++ b/_config.yml
@@ -84,13 +84,13 @@ social:
   - icon: fab fa-stack-overflow
     title: Stack Overflow
     url: https://stackoverflow.com/users/3921457
-  - icon: fab fa-medium
+  - icon: fab fa-medium-m
     title: Medium
     url: https://medium.com/@garciparedes
   - icon: ai ai-google-scholar
     title: Google Scholar
     url: https://scholar.google.com/citations?user=X3Mb7BAAAAAJ
-  - icon: fab fa-linkedin
+  - icon: fab fa-linkedin-in
     title: LinkedIn
     url: https://www.linkedin.com/in/garciparedes/
   - icon: fab fa-patreon
